Bug 150931 - Calc drop shadows do not display properly
Summary: Calc drop shadows do not display properly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-09-13 16:12 UTC by dskast71
Modified: 2022-09-15 16:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing incorrect display of bottom/right shadow (7.65 KB, image/png)
2022-09-13 16:13 UTC, dskast71
Details
Sample ODS file (8.02 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-09-13 18:58 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dskast71 2022-09-13 16:12:09 UTC
Description:
I’ve noticed that since updating to LO 7.4 the drop shadows on calc cells don’t display properly. Specifically, the lower right cell in a given range is excluded, but ONLY if the shadow drops down and to the right. Drop shadows in other directions display as expected. See screenshot.

Steps to Reproduce:
1. Select range of cells.
2. Right-click, select "Format Cells."
3. Choose Borders tab, select Shadow Style>Position>Cast Shadow to Bottom Right.

Actual Results:
Shadow displays properly on all cells except bottom right cell.

Expected Results:
Shadow should display properly on all cells.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Attaching screenshot.
Comment 1 dskast71 2022-09-13 16:13:03 UTC
Created attachment 182413 [details]
Screenshot showing incorrect display of bottom/right shadow
Comment 2 m_a_riosv 2022-09-13 17:20:06 UTC
Please, can you attach the sample file?
Comment 3 dskast71 2022-09-13 18:04:59 UTC
File included under attachments.
Comment 4 Rafael Lima 2022-09-13 18:58:41 UTC
Created attachment 182422 [details]
Sample ODS file

I created a sample ODS file.

The file opens OK in

Version: 7.3.5.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.5-0ubuntu0.22.04.1
Calc: threaded

But the problem is REPRODUCIBLE in:

Version: 7.4.0.3 / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded
Comment 5 Xisco Faulí 2022-09-13 19:07:35 UTC
Regression introduced by:

author	Luboš Luňák <l.lunak@collabora.com>	2022-02-08 20:02:04 +0100
committer	Luboš Luňák <l.lunak@collabora.com>	2022-02-10 09:38:54 +0100
commit d48e68407931fc33044aa7f3fc9e971897fac610 (patch)
tree aa7ff6b210a513d9bc8177e602abde62f7c8a9ef
parent 98ecef56d0f87cd922ca560fead4e2533b30d57c (diff)
clean up accessing CellInfo array in RowInfo

Bisected with: bibisect-linux64-7.4

Adding Cc: to Luboš Luňák
Comment 6 Commit Notification 2022-09-14 10:21:42 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/308174945174bfd67f0444ef0c29634a4ecd961b

fix off-by-one in Calc shadow handling (tdf#150931)

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-09-15 08:10:16 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/b2a5fa061c7e254a39b08523f2c6988baf699938

fix off-by-one in Calc shadow handling (tdf#150931)

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-09-15 16:40:39 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f089f56aa0035ca0ee33bac752a7a92086680c24

tdf#150931: vcl_pdfexport: Add unittest

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.