fix off-by-one in Calc shadow handling (tdf#150931)

A mistake from d48e68407931fc33044aa7f3fc9e971897fac610, the number
is off as can be seen when compared to the bRightDiff part above.

Change-Id: Id87d69c45cd3336ab8a122a2cae505a16848cdf7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139902
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>